Fix active nav images, fix overflow on mobile

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -162,7 +162,7 @@
 }
 
 .overflow {
-  max-height: 80vh;
+  max-height: calc(100vh - 135px);
   overflow-x: scroll;
 }
 
